dimagi-SalesforceFB/src/objects/Location__c.object
<CustomObject>
    <description>Tracks where our projects are executed.  Countries, Regions, States, and Geopoint.</description>
    <fields>
        <fullName>CommCare_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Testing - ignore.</inlineHelpText>
        <label>CommCare_ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geopoint__c</fullName>
        <inlineHelpText>The Lat&lt;space&gt;Lon of the project location.  Projects often spanning several regions, however, enter a point that best represents the location of this project if approrpiate, if it would be misleading, leave this blank.  eg (4.123 5.456)</inlineHelpText>
        <label>Geopoint</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>This will be converted to a pick-list hopefully.</inlineHelpText>
        <label>State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Location_1__c</fullName>
        <inlineHelpText>A region below state (e.g. city)</inlineHelpText>
        <label>Sub-Location 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Location_2__c</fullName>
        <inlineHelpText>A region below sub-location 2</inlineHelpText>
        <label>Sub-Location 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>hidden_project__c</fullName>
        <description>Used to pass the project value to the New Location window when creating a location from the project.</description>
        <label>Hidden Project Reference</label>
        <type>TextArea</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>